--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_contenedor_fragments">ContenedorFragmentsActivity</string>
     <string name="title_activity_contenedor_fragment">ContenedorFragment</string>
+    <string name="default_web_client_id">955974123852-40rq639i5rnqn1kcgrgnieu7vtf1sgp4.apps.googleusercontent.com</string>
 </resources>
